--- a/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
+++ b/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
@@ -1,6 +1,6 @@
 ---
 Aberdeenshire West and Kincardine:
-Ashton under Lyne:
+Ashton under Lyne: Ashton-under-Lyne
 Ayr Carrick and Cumnock:
 Ayrshire North and Arran:
 Basildon South and East Thurrock:
@@ -8,18 +8,18 @@ Bridlington and the Wolds:
 Caithness Sutherland and Easter Ross:
 Carmarthen:
 Dorset Mid and Poole North:
-Durham, City of:
+Durham, City of: City of Durham
 Faversham and Kent Mid:
 Hull East:
 Middlesbrough South and Cleveland East:
 Montgomeryshire and Glyndwr:
 Na h-Eileanan An Iar (Western Isles):
-Northamptonshire South:
-Northumberland North:
+Northamptonshire South: South Northamptonshire
+Northumberland North: North Northumberland
 Pembrokeshire Mid and South:
 Somerset North East and Hanham:
 Suffolk Central and Ipswich North:
 Warwickshire North and Bedworth:
 Worthing East and Shoreham:
-Wrekin, The:
+Wrekin, The: The Wrekin
 Ynys Mon (Anglesey):
