8 out of 24 done 16 to go

--- a/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
+++ b/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
@@ -1,8 +1,8 @@
 ---
-Aberdeenshire West and Kincardine:
+Aberdeenshire West and Kincardine: West Aberdeenshire and Kincardine
 Ashton under Lyne: Ashton-under-Lyne
-Ayr Carrick and Cumnock:
-Ayrshire North and Arran:
+Ayr Carrick and Cumnock: Ayr, Carrick and Cumnock
+Ayrshire North and Arran: North Ayrshire and Arran
 Basildon South and East Thurrock:
 Bridlington and the Wolds:
 Caithness Sutherland and Easter Ross:
