--- a/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
+++ b/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
@@ -3,16 +3,16 @@ Aberdeenshire West and Kincardine: West Aberdeenshire and Kincardine
 Ashton under Lyne: Ashton-under-Lyne
 Ayr Carrick and Cumnock: Ayr, Carrick and Cumnock
 Ayrshire North and Arran: North Ayrshire and Arran
-Basildon South and East Thurrock:
-Bridlington and the Wolds:
-Caithness Sutherland and Easter Ross:
-Carmarthen:
-Dorset Mid and Poole North:
+Basildon South and East Thurrock: South Basildon and East Thurrock
+Bridlington and the Wolds: Bridlington and The Wolds
+Caithness Sutherland and Easter Ross: Caithness, Sutherland and Easter Ross
+Carmarthen: Caerfyrddin
+Dorset Mid and Poole North: Mid Dorset and North Poole
 Durham, City of: City of Durham
-Faversham and Kent Mid:
-Hull East:
-Middlesbrough South and Cleveland East:
-Montgomeryshire and Glyndwr:
+Faversham and Kent Mid: Faversham and Mid Kent
+Hull East: Kingston upon Hull East
+Middlesbrough South and Cleveland East: Middlesbrough South and East Cleveland
+Montgomeryshire and Glyndwr: Montgomeryshire and Glyndŵr
 Na h-Eileanan An Iar (Western Isles):
 Northamptonshire South: South Northamptonshire
 Northumberland North: North Northumberland
