--- a/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
+++ b/db/fixtures/electoral_calculus_constituency_mapping_to_mysoc.yml
@@ -13,13 +13,13 @@ Faversham and Kent Mid: Faversham and Mid Kent
 Hull East: Kingston upon Hull East
 Middlesbrough South and Cleveland East: Middlesbrough South and East Cleveland
 Montgomeryshire and Glyndwr: Montgomeryshire and Glyndŵr
-Na h-Eileanan An Iar (Western Isles):
+Na h-Eileanan An Iar (Western Isles): Na h-Eileanan an Iar
 Northamptonshire South: South Northamptonshire
 Northumberland North: North Northumberland
-Pembrokeshire Mid and South:
-Somerset North East and Hanham:
-Suffolk Central and Ipswich North:
-Warwickshire North and Bedworth:
-Worthing East and Shoreham:
+Pembrokeshire Mid and South: Mid and South Pembrokeshire
+Somerset North East and Hanham: North East Somerset and Hanham
+Suffolk Central and Ipswich North: Central Suffolk and North Ipswich
+Warwickshire North and Bedworth: North Warwickshire and Bedworth
+Worthing East and Shoreham: East Worthing and Shoreham
 Wrekin, The: The Wrekin
-Ynys Mon (Anglesey):
+Ynys Mon (Anglesey): Ynys Môn
